force-app/examples/activityList/objects/Activity/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>IF(IsTask,IsClosed, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>