force-app/examples/activityList/objects/Activity/fields/TypeIcon__c.field-meta.xml
<CustomField>
    <fullName>TypeIcon__c</fullName>
    <formula>IF(
    IsTask,
    CASE(
        TEXT(ActivitySubtype),
        "Call", "standard:log_a_call",
        "Email", "standard:email",
        "standard:task"
    ),
    "standard:event"
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Type Icon</label>
    <type>Text</type>
</CustomField>