force-app/examples/activityList/objects/Activity/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <formula>TEXT(ActivitySubtype)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Name</label>
    <type>Text</type>
</CustomField>